--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root
+{
+  --dominant: #FFFFFF;
+  --secondary: #00152d;
+  --highlight: #51ff00
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
