--- a/src/pages/dashboard/pageDashboard.css
+++ b/src/pages/dashboard/pageDashboard.css
@@ -3,34 +3,36 @@
 
 }
 
-#page-dashboard-sections
+.page-dashboard-sections
 {
     display: grid;
     grid-template-columns: 33% 34% 33%;
 
+
 }
 
-#page-dashboard-contracts
+.page-dashboard-contracts
 {
 
 }
 
-#page-dashboard-contracts
+.page-dashboard-contracts
 {
 
 }
 
-#page-dashboard-customers
+.page-dashboard-customers
 {
 
 }
 
-#page-dashboard-section
+.page-dashboard-section
 {
-    background-color: rgba(218, 237, 237, 0.97);
+
+
 }
 
-#page-dashboard h1
+.page-dashboard h2, .page-dashboard h1
 {
     text-align: center;
 
