--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,10 +6,11 @@
   align-items: center;
   align-content: center;
 
+  background-color: white;
   box-shadow: 0 -5px 15px #e0e0e0;
   min-height: 80px;
 
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
