--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -23,3 +23,20 @@
 .header-login > {
     margin: 5px;
 }
+
+@media (min-width: 320px) and (max-width: 999px)
+{
+    .header {
+        display: flex;
+    }
+    
+}
+
+
+.header-logo h1 a 
+{
+    color: black; 
+    text-decoration: none;
+}
+
+
