--- a/src/pages/home/pageHome.css
+++ b/src/pages/home/pageHome.css
@@ -65,7 +65,8 @@
 
     #page-home-relationship img
     {
-        width: 450px;
+        max-width: 450px;
+        width: 100%;
         margin-top: -50px;
     }
 
